logs/machete.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/machete'...
Listing './lib/python3.5/site-packages/machete/submodule'...
Compiling './lib/python3.5/site-packages/machete/submodule/module.py'...
***   File "./lib/python3.5/site-packages/machete/submodule/module.py", line 42
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/machete/templates'...
Listing './lib/python3.5/site-packages/machete/templates/_base'...
Listing './lib/python3.5/site-packages/machete/templates/_base/packagesample'...
Listing './lib/python3.5/site-packages/machete/templates/_base/packagesample/modules'...
Listing './lib/python3.5/site-packages/machete/templates/_base/tests'...
Listing './lib/python3.5/site-packages/machete/templates/app'...
Listing './lib/python3.5/site-packages/machete/templates/app/packagesample'...
Listing './lib/python3.5/site-packages/machete/templates/bootstrap'...
Listing './lib/python3.5/site-packages/machete/templates/bootstrap/packagesample'...
Listing './lib/python3.5/site-packages/machete/templates/bootstrap/packagesample/static'...
Listing './lib/python3.5/site-packages/machete/templates/bootstrap/packagesample/static/css'...
Listing './lib/python3.5/site-packages/machete/templates/bootstrap/packagesample/static/js'...
Listing './lib/python3.5/site-packages/machete/templates/bootstrap/packagesample/templates'...
Listing './lib/python3.5/site-packages/machete/templates/flask'...
Listing './lib/python3.5/site-packages/machete/templates/flask/packagesample'...
Listing './lib/python3.5/site-packages/machete/templates/flask/packagesample/static'...
Listing './lib/python3.5/site-packages/machete/templates/flask/packagesample/static/css'...
Listing './lib/python3.5/site-packages/machete/templates/flask/packagesample/static/js'...
Listing './lib/python3.5/site-packages/machete/templates/flask/packagesample/templates'...
Listing './lib/python3.5/site-packages/machete-0.0.5.100.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vex'...
Listing './lib/python3.5/site-packages/vex/shell_configs'...
Listing './lib/python3.5/site-packages/vex-0.0.18.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
